--- a/_publications/c-2.md
+++ b/_publications/c-2.md
@@ -3,7 +3,7 @@ title: "An Approach to Support Digital Process Twin"
 collection: publications
 permalink: /publication/c-2
 excerpt: ''
-date: 2022
+date: 2022-09-01
 venue: 'DASC/PiCom/CBDCom/CyberSciTech'
 paperurl: ''
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. An Approach to Support Digital Process Twin. In: DASC/PiCom/CBDCom/CyberSciTech, 1-4, 2022'
