--- a/_publications/j-1.md
+++ b/_publications/j-1.md
@@ -3,7 +3,7 @@ title: "A BPMN-driven framework for Multi-Robot System development"
 collection: publications
 permalink: /publication/j-1
 excerpt: ''
-date: 2022
+date: 2022-12-01
 venue: 'Journal of Robotics and Autonomous Systems'
 paperurl: 'https://www.sciencedirect.com/science/article/pii/S0921889022002111'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A BPMN-driven framework for Multi-Robot System development_. Robotics and Autonomous Systems, 160,104322. (2023)'
