--- a/_publications/c-1.md
+++ b/_publications/c-1.md
@@ -3,7 +3,7 @@ title: "Disciplined use of BPMN for mission modeling of Multi-Robot Systems"
 collection: publications
 permalink: /publication/c-1
 excerpt: ''
-date: 2021
+date: 2021-11-01
 venue: 'Proceedings of the Forum at Practice of Enterprise Modeling'
 paperurl: 'https://ceur-ws.org/Vol-3045/paper01.pdf'
 citation: 'K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _Disciplined use of BPMN for mission modeling of Multi-Robot Systems_. In: Proceedings of the Forum at International Conference on the Practice of Enterprise Modeling, vol. 3045, 1-10, CEUR-WS.org, 2021'
