--- a/_publications/c-3.md
+++ b/_publications/c-3.md
@@ -3,7 +3,7 @@ title: "Enhancing compatibility in QoS communication for the Internet of Robotic
 collection: publications
 permalink: /publication/c-3
 excerpt: ''
-date: 2023
+date: 2023-09-01
 venue: 'Conference on Conceptual Modeling: ER Forum'
 paperurl: 'https://ceur-ws.org/Vol-3618/forum_paper_17.pdf'
 citation: 'K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _Disciplined use of BPMN for mission modeling of Multi-Robot Systems_. In: Proceedings of the Forum at International Conference on the Practice of Enterprise Modeling, vol. 3045, 1-10, CEUR-WS.org, 2021'
