--- a/_publications/j-2.md
+++ b/_publications/j-2.md
@@ -3,7 +3,7 @@ title: "Executable Digital Process Twins: Towards the Enhancement of Process-Dri
 collection: publications
 permalink: /publication/j-2
 excerpt: ''
-date: 2023
+date: 2023-08-01
 venue: 'Journal of Big Data and Cognitive Computing'
 paperurl: 'https://www.mdpi.com/2504-2289/7/3/139'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _Executable Digital Process Twins: Towards the Enhancement of Process-Driven Systems_. Big Data and Cognitive Computing, 7(3), 139. (2023)'
