--- a/_publications/c-3.md
+++ b/_publications/c-3.md
@@ -42,7 +42,7 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Ruschioni, F. Tiezzi. _Enhancing 
   booktitle    = {Companion Proceedings of the 42nd International Conference on Conceptual
                   Modeling: {ER} Forum, 7th SCME, Project Exhibitions, Posters and Demos,
                   and Doctoral Consortium co-located with {ER} 2023},
-  series       = {{CEUR} Workshop Proceedings},
+  series       = {CEUR Workshop Proceedings},
   volume       = {3618},
   publisher    = {CEUR-WS.org},
   year         = {2023},
