--- a/_publications/c-1.md
+++ b/_publications/c-1.md
@@ -41,7 +41,7 @@ Cite as: K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _
                   Francesco Tiezzi},
   title        = {Disciplined use of {BPMN} for mission modeling of Multi-Robot Systems},
   booktitle    = {Proceedings of the Forum at Practice of Enterprise Modeling},
-  series       = {{CEUR} Workshop Proceedings},
+  series       = {CEUR Workshop Proceedings},
   volume       = {3045},
   pages        = {1--10},
   publisher    = {CEUR-WS.org},
