--- a/_publications/c-1.md
+++ b/_publications/c-1.md
@@ -39,7 +39,7 @@ Cite as: K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _
                   Barbara Re and
                   Lorenzo Rossi and
                   Francesco Tiezzi},
-  title        = {Disciplined use of {BPMN} for mission modeling of Multi-Robot Systems},
+  title        = {Disciplined use of BPMN for mission modeling of Multi-Robot Systems},
   booktitle    = {Proceedings of the Forum at Practice of Enterprise Modeling},
   series       = {CEUR Workshop Proceedings},
   volume       = {3045},
