--- a/_publications/c-2.md
+++ b/_publications/c-2.md
@@ -38,13 +38,13 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _An Approac
                   Lorenzo Rossi and
                   Francesco Tiezzi},
   title        = {An Approach to Support Digital Process Twin},
-  booktitle    = {{IEEE} Intl. Conf. on Dependable, Autonomic and Secure Computing,
+  booktitle    = {IEEE Intl. Conf. on Dependable, Autonomic and Secure Computing,
                   Intl Conf on Pervasive Intelligence and Computing, Intl Conf on Cloud
                   and Big Data Computing, Intl Conf on Cyber Science and Technology
                   Congress, DASC/PiCom/CBDCom/CyberSciTech 2022, Falerna, Italy, September
                   12-15, 2022},
   pages        = {1--4},
-  publisher    = {{IEEE}},
+  publisher    = {IEEE},
   year         = {2022},
 }
 ```
