[fix] style and publications

--- a/_publications/c-2.md
+++ b/_publications/c-2.md
@@ -5,17 +5,13 @@ permalink: /publication/c-2
 excerpt: ''
 date: 2022-09-01
 venue: 'DASC/PiCom/CBDCom/CyberSciTech'
-paperurl: ''
+paperurl: 'https://ieeexplore.ieee.org/document/9927841'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. An Approach to Support Digital Process Twin. In: DASC/PiCom/CBDCom/CyberSciTech, 1-4, 2022'
 ---
 
 
-<details>
-  <summary>Abstract</summary>
-  
-  ### Abstract
-  Nowadays, the digitalization of business processes goes hand in hand with the adoption of IoT and robotic systems for automating work activities, leading to the birth of new ways of representing organizational information, i.e. digital twins. However, interpreting the behavior of autonomous systems, especially those with several devices, and keeping track of their execution status can be very difficult even using ad-hoc simulators. Therefore, there is the need for a digital process twin representing, simulating, and visualizing systems’ behavior. In this regard, this work proposes an approach to support the digital process twins of autonomous systems by representing, simulating, and visualizing the system behavior. We demonstrate the benefits of the approach by applying it to a robotic scenario.
-</details>
+### Abstract
+Nowadays, the digitalization of business processes goes hand in hand with the adoption of IoT and robotic systems for automating work activities, leading to the birth of new ways of representing organizational information, i.e. digital twins. However, interpreting the behavior of autonomous systems, especially those with several devices, and keeping track of their execution status can be very difficult even using ad-hoc simulators. Therefore, there is the need for a digital process twin representing, simulating, and visualizing systems’ behavior. In this regard, this work proposes an approach to support the digital process twins of autonomous systems by representing, simulating, and visualizing the system behavior. We demonstrate the benefits of the approach by applying it to a robotic scenario.
 
 
 ***
@@ -27,10 +23,9 @@ citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. An Approa
 Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _An Approach to Support Digital Process Twin_. In: DASC/PiCom/CBDCom/CyberSciTech, 1-4, 2022
 
 
-<details>
-  <summary>Bibtex</summary>
 
-  ```
+
+```
   @inproceedings{corradiniPRRT22,
   author       = {Flavio Corradini and
                   Sara Pettinari and
@@ -49,4 +44,3 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _An Approac
 }
 ```
 
-</details>
