--- a/_publications/j-1.md
+++ b/_publications/j-1.md
@@ -6,18 +6,15 @@ excerpt: ''
 date: 2022-12-01
 venue: 'Journal of Robotics and Autonomous Systems'
 paperurl: 'https://www.sciencedirect.com/science/article/pii/S0921889022002111'
-citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A BPMN-driven framework for Multi-Robot System development_. Robotics and Autonomous Systems, 160,104322. (2023)'
+citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. A BPMN-driven framework for Multi-Robot System development. Robotics and Autonomous Systems, 160,104322. (2023)'
 ---
 
 
-<details>
-  <summary>Abstract</summary>
-  
-  ### Abstract
-  Programming robotic systems is often a challenging task requiring advanced skills, especially when the goal is to ensure loosely-coupled coordination in heterogeneous Multi-Robot Systems (MRSs). Model-driven approaches for robotic system engineering have shown their benefits in facilitating the development of robots’ behavior, controllers, and system components. However, the state of the art still lacks contributions addressing crucial aspects of the model-driven approach applied to MRSs, such as developing robots’ distributed cooperation through models supporting the communication among robots.
-  
-  In this paper, we present a novel framework for modeling, configuring and enacting the cooperative behaviors of MRSs through collaboration diagrams as provided by the BPMN 2.0 standard. The advantages of our solution lie, indeed, in the use of BPMN, which provides easily understandable and highly expressive diagrams for representing the cooperation among distributed robots, and benefits from a wide list of supporting tools. Starting from the selection of BPMNelements, we define a set of guidelines for driving the developer in modeling an MRS mission using BPMN. The developer configures the resulting collaboration diagram to link elements in the model to the robotic middleware, ROS2 in the toolchain we implemented. Finally, the configured model is enacted by BPMN engines integrated into the ROS2 middleware run by each robot involved in the MRS, thus obtaining a fully distributed cooperation. We assess our framework’s effectiveness through experiments in simulated and real environments.
-</details>
+
+### Abstract
+Programming robotic systems is often a challenging task requiring advanced skills, especially when the goal is to ensure loosely-coupled coordination in heterogeneous Multi-Robot Systems (MRSs). Model-driven approaches for robotic system engineering have shown their benefits in facilitating the development of robots’ behavior, controllers, and system components. However, the state of the art still lacks contributions addressing crucial aspects of the model-driven approach applied to MRSs, such as developing robots’ distributed cooperation through models supporting the communication among robots.
+
+In this paper, we present a novel framework for modeling, configuring and enacting the cooperative behaviors of MRSs through collaboration diagrams as provided by the BPMN 2.0 standard. The advantages of our solution lie, indeed, in the use of BPMN, which provides easily understandable and highly expressive diagrams for representing the cooperation among distributed robots, and benefits from a wide list of supporting tools. Starting from the selection of BPMNelements, we define a set of guidelines for driving the developer in modeling an MRS mission using BPMN. The developer configures the resulting collaboration diagram to link elements in the model to the robotic middleware, ROS2 in the toolchain we implemented. Finally, the configured model is enacted by BPMN engines integrated into the ROS2 middleware run by each robot involved in the MRS, thus obtaining a fully distributed cooperation. We assess our framework’s effectiveness through experiments in simulated and real environments.
 
 
 ***
@@ -29,10 +26,8 @@ citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A BPMN-drive
 Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A BPMN-driven framework for Multi-Robot System development_. Robotics and Autonomous Systems, 160,104322. (2023)
 
 
-<details>
-  <summary>Bibtex</summary>
 
-  ```
+```
   @article{corradiniPRRT23,
   author       = {Flavio Corradini and
                   Sara Pettinari and
@@ -46,5 +41,3 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A BPMN-driven 
   year         = {2023}
 }
 ```
-
-</details>
