--- a/_publications/c-3.md
+++ b/_publications/c-3.md
@@ -6,17 +6,11 @@ excerpt: ''
 date: 2023-09-01
 venue: 'Conference on Conceptual Modeling: ER Forum'
 paperurl: 'https://ceur-ws.org/Vol-3618/forum_paper_17.pdf'
-citation: 'K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _Disciplined use of BPMN for mission modeling of Multi-Robot Systems_. In: Proceedings of the Forum at International Conference on the Practice of Enterprise Modeling, vol. 3045, 1-10, CEUR-WS.org, 2021'
+citation: 'F. Corradini, S. Pettinari, B. Re, L. Ruschioni, F. Tiezzi. Enhancing Compatibility in QoS Communication for the Internet of Robotic Things. ER Forum/Posters/Demos, vol. 3618, CEUR-WS.org, 2023.'
 ---
 
-
-<details>
-  <summary>Abstract</summary>
-  
-  ### Abstract
-  Internet of Things and robotic systems are widespread in many application domains. The emergence of the Internet of Robotic Things seeks to combine both technologies’ strengths, thus empowering the system with enhanced capabilities. Nevertheless, this system is composed of heterogeneous devices that need to communicate to work properly. To guarantee effective communication among the devices, we propose a model-driven approach that enables the integration of quality of service policies in communication among Internet of Robotic Things system devices, while ensuring their compatibility at the design time. We apply our approach in a smart agriculture scenario.
-</details>
-
+### Abstract
+Internet of Things and robotic systems are widespread in many application domains. The emergence of the Internet of Robotic Things seeks to combine both technologies’ strengths, thus empowering the system with enhanced capabilities. Nevertheless, this system is composed of heterogeneous devices that need to communicate to work properly. To guarantee effective communication among the devices, we propose a model-driven approach that enables the integration of quality of service policies in communication among Internet of Robotic Things system devices, while ensuring their compatibility at the design time. We apply our approach in a smart agriculture scenario.
 
 ***
 
@@ -27,10 +21,7 @@ citation: 'K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi.
 Cite as: F. Corradini, S. Pettinari, B. Re, L. Ruschioni, F. Tiezzi. _Enhancing Compatibility in QoS Communication for the Internet of Robotic Things_. ER Forum/Posters/Demos, vol. 3618, CEUR-WS.org, 2023.
 
 
-<details>
-  <summary>Bibtex</summary>
-
-  ```
+```
   @inproceedings{corradiniP0R023,
   author       = {Flavio Corradini and
                   Sara Pettinari and
@@ -48,5 +39,3 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Ruschioni, F. Tiezzi. _Enhancing 
   year         = {2023},
 }
 ```
-
-</details>
