--- a/_publications/j-2.md
+++ b/_publications/j-2.md
@@ -6,16 +6,13 @@ excerpt: ''
 date: 2023-08-01
 venue: 'Journal of Big Data and Cognitive Computing'
 paperurl: 'https://www.mdpi.com/2504-2289/7/3/139'
-citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _Executable Digital Process Twins: Towards the Enhancement of Process-Driven Systems_. Big Data and Cognitive Computing, 7(3), 139. (2023)'
+citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. Executable Digital Process Twins: Towards the Enhancement of Process-Driven Systems. Big Data and Cognitive Computing, 7(3), 139. (2023)'
 ---
 
 
-<details>
-  <summary>Abstract</summary>
   
-  ### Abstract
-  The development of process-driven systems and the advancements in digital twins have led to the birth of new ways of monitoring and analyzing systems, i.e., digital process twins. Specifically, a digital process twin can allow the monitoring of system behavior and the analysis of the execution status to improve the whole system. However, the concept of the digital process twin is still theoretical, and process-driven systems cannot really benefit from them. In this regard, this work discusses how to effectively exploit a digital process twin and proposes an implementation that combines the monitoring, refinement, and enactment of system behavior. We demonstrated the proposed solution in a multi-robot scenario.
-</details>
+### Abstract
+The development of process-driven systems and the advancements in digital twins have led to the birth of new ways of monitoring and analyzing systems, i.e., digital process twins. Specifically, a digital process twin can allow the monitoring of system behavior and the analysis of the execution status to improve the whole system. However, the concept of the digital process twin is still theoretical, and process-driven systems cannot really benefit from them. In this regard, this work discusses how to effectively exploit a digital process twin and proposes an implementation that combines the monitoring, refinement, and enactment of system behavior. We demonstrated the proposed solution in a multi-robot scenario.
 
 
 ***
@@ -27,10 +24,8 @@ citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _Executable D
 Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _Executable Digital Process Twins: Towards the Enhancement of Process-Driven Systems_. Big Data and Cognitive Computing, 7(3), 139. (2023)
 
 
-<details>
-  <summary>Bibtex</summary>
 
-  ```
+```
   @article{corradiniPRRT23,
     author       = {Flavio Corradini and
                     Sara Pettinari and
@@ -46,5 +41,3 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _Executable Dig
     year         = {2023}
   }
 ```
-
-</details>
