--- a/_publications/j-3.md
+++ b/_publications/j-3.md
@@ -6,16 +6,12 @@ excerpt: ''
 date: 2024-01-01
 venue: 'Journal of Software and Systems Modeling'
 paperurl: 'https://link.springer.com/article/10.1007/s10270-024-01153-5'
-citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A technique for discovering BPMN collaboration diagrams_. Software and Systems Modeling (2024)'
+citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. A technique for discovering BPMN collaboration diagrams. Software and Systems Modeling (2024)'
 ---
 
 
-<details>
-  <summary>Abstract</summary>
-  
-  ### Abstract
-  The process mining domain is actively supported by techniques and tools addressing the discovery of single-participant business processes. In contrast, approaches for discovering collaboration models out of distributed data stored by multiple interacting participants are lacking. In this context, we propose a novel technique for discovering collaboration models from sets of event logs that include data about participants’ interactions. The technique discovers each participant’s process through already available algorithms introduced by the process mining community. Then, it analyzes the logs to extract information on the exchange of messages to automatically combine the discovered processes into a collaboration model representing the distributed system’s behavior and providing analytics on the interactions. The technique has been implemented in a tool evaluated via several experiments on different application domains.
-</details>
+### Abstract
+The process mining domain is actively supported by techniques and tools addressing the discovery of single-participant business processes. In contrast, approaches for discovering collaboration models out of distributed data stored by multiple interacting participants are lacking. In this context, we propose a novel technique for discovering collaboration models from sets of event logs that include data about participants’ interactions. The technique discovers each participant’s process through already available algorithms introduced by the process mining community. Then, it analyzes the logs to extract information on the exchange of messages to automatically combine the discovered processes into a collaboration model representing the distributed system’s behavior and providing analytics on the interactions. The technique has been implemented in a tool evaluated via several experiments on different application domains.
 
 
 ***
@@ -27,10 +23,8 @@ citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A technique 
 Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A technique for discovering BPMN collaboration diagrams_. Software and Systems Modeling (2024)
 
 
-<details>
-  <summary>Bibtex</summary>
 
-  ```
+```
   @article{corradiniPRRT24,
   author       = {Flavio Corradini and
                   Sara Pettinari and
@@ -45,4 +39,3 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A technique fo
 }
 ```
 
-</details>
