--- a/_publications/c-1.md
+++ b/_publications/c-1.md
@@ -23,7 +23,7 @@ However, these tools require high skills for programming each robot’s behavior
 Cite as: K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _Disciplined use of BPMN for mission modeling of Multi-Robot Systems_. In: Proceedings of the Forum at International Conference on the Practice of Enterprise Modeling, vol. 3045, 1-10, CEUR-WS.org, 2021
 
 
-```
+<pre>
   @inproceedings{burrCP00021,
   author       = {Khalid Bourr and
                   Flavio Corradini and
@@ -39,4 +39,4 @@ Cite as: K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _
   publisher    = {CEUR-WS.org},
   year         = {2021},
 }
-```
+</pre>
