--- a/_publications/c-1.md
+++ b/_publications/c-1.md
@@ -24,7 +24,7 @@ Cite as: K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _
 
 
 <pre>
-  @inproceedings{burrCP00021,
+  @inproceedings{bourrCP00021,
   author       = {Khalid Bourr and
                   Flavio Corradini and
                   Sara Pettinari and
