--- a/_publications/c-3.md
+++ b/_publications/c-3.md
@@ -21,7 +21,7 @@ Internet of Things and robotic systems are widespread in many application domain
 Cite as: F. Corradini, S. Pettinari, B. Re, L. Ruschioni, F. Tiezzi. _Enhancing Compatibility in QoS Communication for the Internet of Robotic Things_. ER Forum/Posters/Demos, vol. 3618, CEUR-WS.org, 2023.
 
 
-```
+<pre>
   @inproceedings{corradiniP0R023,
   author       = {Flavio Corradini and
                   Sara Pettinari and
@@ -38,4 +38,4 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Ruschioni, F. Tiezzi. _Enhancing 
   publisher    = {CEUR-WS.org},
   year         = {2023},
 }
-```
+</pre>
