--- a/_publications/c-4.md
+++ b/_publications/c-4.md
@@ -23,8 +23,8 @@ Robotic systems are widely adopted in various application scenarios. A very comp
 Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _A Methodology for the Analysis of Robotic Systems via Process Mining_. Enterprise Design, Operations, and Computing: 117-133, 2023
 
 
-```
-  @inproceedings{corradiniPRRT23,
+<pre>
+@inproceedings{corradiniPRRT23,
     author       = {Flavio Corradini and
                     Sara Pettinari and
                     Barbara Re and
@@ -38,4 +38,4 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _A Methodol
     publisher    = {Springer},
     year         = {2023}
   }
-```
+</pre>
