--- a/_publications/j-1.md
+++ b/_publications/j-1.md
@@ -27,7 +27,7 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A BPMN-driven 
 
 
 
-```
+<pre>
   @article{corradiniPRRT23,
   author       = {Flavio Corradini and
                   Sara Pettinari and
@@ -40,4 +40,4 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A BPMN-driven 
   pages        = {104322},
   year         = {2023}
 }
-```
+</pre>
