--- a/_publications/j-2.md
+++ b/_publications/j-2.md
@@ -25,7 +25,7 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _Executable Dig
 
 
 
-```
+<pre>
   @article{corradiniPRRT23,
     author       = {Flavio Corradini and
                     Sara Pettinari and
@@ -40,4 +40,4 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _Executable Dig
     pages        = {139},
     year         = {2023}
   }
-```
+</pre>
