--- a/_publications/j-3.md
+++ b/_publications/j-3.md
@@ -24,8 +24,8 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A technique fo
 
 
 
-```
-  @article{corradiniPRRT24,
+<pre>
+@article{corradiniPRRT24,
   author       = {Flavio Corradini and
                   Sara Pettinari and
                   Barbara Re and
@@ -37,5 +37,5 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A technique fo
   pages        = {},
   year         = {}
 }
-```
+</pre>
 
