added paper ref to tools

--- a/_publications/c-4.md
+++ b/_publications/c-4.md
@@ -7,6 +7,7 @@ date: 2023-10-01
 venue: 'International Conference on Enterprise Design, Operations, and Computing'
 paperurl: 'https://link.springer.com/chapter/10.1007/978-3-031-46587-1_7'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. A Methodology for the Analysis of Robotic Systems via Process Mining. Enterprise Design, Operations, and Computing: 117-133, 2023'
+tool: tale
 ---
 
 
