--- a/_publications/j-3.md
+++ b/_publications/j-3.md
@@ -7,6 +7,7 @@ date: 2024-01-01
 venue: 'Journal of Software and Systems Modeling'
 paperurl: 'https://link.springer.com/article/10.1007/s10270-024-01153-5'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. A technique for discovering BPMN collaboration diagrams. Software and Systems Modeling (2024)'
+tool: none
 ---
 
 
@@ -33,9 +34,9 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A technique fo
                   Francesco Tiezzi},
   title        = {A technique for discovering BPMN collaboration diagrams},
   journal      = {Software and Systems Modeling},
-  volume       = {},
-  pages        = {},
-  year         = {}
+  pages        ={1--21},
+  year         ={2024},
+  publisher    ={Springer}
 }
 </pre>
 
