--- a/_publications/b-1.md
+++ b/_publications/b-1.md
@@ -7,6 +7,7 @@ date: 2024-05-01
 venue: 'Fluidware. Internet of Things'
 paperurl: 'https://www.researchgate.net/publication/382227457_A_BPMN-Based_Approach_for_IoT_Systems_Engineering'
 citation: 'F. Corradini, F. Fornari, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. A BPMN-Based Approach for IoT Systems Engineering. Fluidware. Internet of Things: 117-133, 2023'
+tool: none
 ---
 
 
