--- a/_publications/j-2.md
+++ b/_publications/j-2.md
@@ -7,6 +7,7 @@ date: 2023-08-01
 venue: 'Journal of Big Data and Cognitive Computing'
 paperurl: 'https://www.mdpi.com/2504-2289/7/3/139'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. Executable Digital Process Twins: Towards the Enhancement of Process-Driven Systems. Big Data and Cognitive Computing, 7(3), 139. (2023)'
+tool: none
 ---
 
 
