--- a/_publications/c-3.md
+++ b/_publications/c-3.md
@@ -7,7 +7,7 @@ date: 2023-09-01
 venue: 'Conference on Conceptual Modeling: ER Forum'
 paperurl: 'https://ceur-ws.org/Vol-3618/forum_paper_17.pdf'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Ruschioni, F. Tiezzi. Enhancing Compatibility in QoS Communication for the Internet of Robotic Things. ER Forum/Posters/Demos, vol. 3618, CEUR-WS.org, 2023.'
-tool: fame
+tool: 'fame'
 ---
 
 ### Abstract
