--- a/_publications/j-1.md
+++ b/_publications/j-1.md
@@ -7,7 +7,7 @@ date: 2022-12-01
 venue: 'Journal of Robotics and Autonomous Systems'
 paperurl: 'https://www.sciencedirect.com/science/article/pii/S0921889022002111'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. A BPMN-driven framework for Multi-Robot System development. Robotics and Autonomous Systems, 160,104322. (2023)'
-tool: fame
+tool: 'fame'
 ---
 
 
