--- a/_publications/c-5.md
+++ b/_publications/c-5.md
@@ -7,7 +7,7 @@ date: 2024-10-01
 venue: 'Process Mining Workshops'
 paperurl: 'https://pros.unicam.it/cominds/assets/papers/ICPM_2024_paper_179.pdf'
 citation: 'A. Giacché, S. Pettinari, and L. Rossi. Revealing One-to-Many Event Relationships in Event Knowledge Graphs. Process Mining Workshops: toappear, 2024'
-tool: soup
+tool: 'soup'
 ---
 
 
