--- a/_publications/b-1.md
+++ b/_publications/b-1.md
@@ -3,6 +3,7 @@ title: "A BPMN-Based Approach for IoT Systems Engineering"
 collection: publications
 permalink: /publication/b-1
 excerpt: ''
+category: books
 date: 2024-05-01
 venue: 'Fluidware. Internet of Things'
 paperurl: 'https://www.researchgate.net/publication/382227457_A_BPMN-Based_Approach_for_IoT_Systems_Engineering'
