--- a/_publications/c-1.md
+++ b/_publications/c-1.md
@@ -3,6 +3,7 @@ title: "Disciplined use of BPMN for mission modeling of Multi-Robot Systems"
 collection: publications
 permalink: /publication/c-1
 excerpt: ''
+category: conferences
 date: 2021-11-01
 venue: 'Proceedings of the Forum at Practice of Enterprise Modeling'
 paperurl: 'https://ceur-ws.org/Vol-3045/paper01.pdf'
