--- a/_publications/c-2.md
+++ b/_publications/c-2.md
@@ -3,6 +3,7 @@ title: "An Approach to Support Digital Process Twin"
 collection: publications
 permalink: /publication/c-2
 excerpt: ''
+category: conferences
 date: 2022-09-01
 venue: 'DASC/PiCom/CBDCom/CyberSciTech'
 paperurl: 'https://ieeexplore.ieee.org/document/9927841'
