--- a/_publications/c-3.md
+++ b/_publications/c-3.md
@@ -3,6 +3,7 @@ title: "Enhancing compatibility in QoS communication for the Internet of Robotic
 collection: publications
 permalink: /publication/c-3
 excerpt: ''
+category: conferences
 date: 2023-09-01
 venue: 'Conference on Conceptual Modeling: ER Forum'
 paperurl: 'https://ceur-ws.org/Vol-3618/forum_paper_17.pdf'
