--- a/_publications/c-5.md
+++ b/_publications/c-5.md
@@ -3,6 +3,7 @@ title: "Revealing One-to-Many Event Relationships in Event Knowledge Graphs"
 collection: publications
 permalink: /publication/c-5
 excerpt: ''
+category: conferences
 date: 2024-10-01
 venue: 'Process Mining Workshops'
 paperurl: 'https://pros.unicam.it/cominds/assets/papers/ICPM_2024_paper_179.pdf'
