--- a/_publications/j-1.md
+++ b/_publications/j-1.md
@@ -3,6 +3,7 @@ title: "A BPMN-driven framework for Multi-Robot System development"
 collection: publications
 permalink: /publication/j-1
 excerpt: ''
+category: manuscripts
 date: 2022-12-01
 venue: 'Journal of Robotics and Autonomous Systems'
 paperurl: 'https://www.sciencedirect.com/science/article/pii/S0921889022002111'
