--- a/_publications/c-4.md
+++ b/_publications/c-4.md
@@ -3,6 +3,7 @@ title: "A Methodology for the Analysis of Robotic Systems via Process Mining"
 collection: publications
 permalink: /publication/c-4
 excerpt: ''
+category: conferences
 date: 2023-10-01
 venue: 'International Conference on Enterprise Design, Operations, and Computing'
 paperurl: 'https://link.springer.com/chapter/10.1007/978-3-031-46587-1_7'
