modified:   _publications/j-3.md

--- a/_publications/j-3.md
+++ b/_publications/j-3.md
@@ -3,6 +3,7 @@ title: "A technique for discovering BPMN collaboration diagrams"
 collection: publications
 permalink: /publication/j-3
 excerpt: ''
+category: manuscripts
 date: 2024-01-01
 venue: 'Journal of Software and Systems Modeling'
 paperurl: 'https://link.springer.com/article/10.1007/s10270-024-01153-5'
