--- a/_publications/b-1.md
+++ b/_publications/b-1.md
@@ -6,7 +6,7 @@ excerpt: ''
 category: books
 date: 2024-05-01
 venue: 'Fluidware. Internet of Things'
-paperurl: 'https://www.researchgate.net/publication/382227457_A_BPMN-Based_Approach_for_IoT_Systems_Engineering'
+paperurl: 'https://doi.org/10.1007/978-3-031-62146-8_5'
 citation: 'F. Corradini, F. Fornari, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. A BPMN-Based Approach for IoT Systems Engineering. Fluidware. Internet of Things: 85-105, 2024'
 tool: 'none'
 ---
