--- a/_publications/c-2.md
+++ b/_publications/c-2.md
@@ -6,7 +6,7 @@ excerpt: ''
 category: conferences
 date: 2022-09-01
 venue: 'DASC/PiCom/CBDCom/CyberSciTech'
-paperurl: 'https://ieeexplore.ieee.org/document/9927841'
+paperurl: 'https://doi.org/10.1109/DASC/PiCom/CBDCom/Cy55231.2022.9927841'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. An Approach to Support Digital Process Twin. In: DASC/PiCom/CBDCom/CyberSciTech, 1-4, 2022'
 tool: 'none'
 ---
