[update] layout and info

--- a/_publications/b-1.md
+++ b/_publications/b-1.md
@@ -8,6 +8,7 @@ date: 2024-05-01
 venue: 'Fluidware. Internet of Things'
 paperurl: 'https://doi.org/10.1007/978-3-031-62146-8_5'
 citation: 'F. Corradini, F. Fornari, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. A BPMN-Based Approach for IoT Systems Engineering. Fluidware. Internet of Things: 85-105, 2024'
+authors: 'F. Corradini, F. Fornari, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi.'
 tool: 'none'
 ---
 
@@ -24,7 +25,7 @@ The management of IoT systems is often challenging, requiring advanced skills, e
 Cite as: F. Corradini, F. Fornari, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _A BPMN-Based Approach for IoT Systems Engineering_. Fluidware. Internet of Things: 85-105, 20234
 
 
-<pre>
+<pre class='bibtex'>
 @inproceedings{corradiniPRRT23,
     author       = {Flavio Corradini and
                     Fabrizio Fornari and
