--- a/_publications/c-1.md
+++ b/_publications/c-1.md
@@ -8,6 +8,7 @@ date: 2021-11-01
 venue: 'Proceedings of the Forum at Practice of Enterprise Modeling'
 paperurl: 'https://ceur-ws.org/Vol-3045/paper01.pdf'
 citation: 'K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. Disciplined use of BPMN for mission modeling of Multi-Robot Systems. In: Proceedings of the Forum at International Conference on the Practice of Enterprise Modeling, vol. 3045, 1-10, CEUR-WS.org, 2021'
+authors: 'K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi.'
 tool: 'fame'
 ---
 
@@ -25,7 +26,7 @@ However, these tools require high skills for programming each robot’s behavior
 Cite as: K. Bourr, F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _Disciplined use of BPMN for mission modeling of Multi-Robot Systems_. In: Proceedings of the Forum at International Conference on the Practice of Enterprise Modeling, vol. 3045, 1-10, CEUR-WS.org, 2021
 
 
-<pre>
+<pre class='bibtex'>
   @inproceedings{bourrCP00021,
   author       = {Khalid Bourr and
                   Flavio Corradini and
