--- a/_publications/c-2.md
+++ b/_publications/c-2.md
@@ -8,6 +8,7 @@ date: 2022-09-01
 venue: 'DASC/PiCom/CBDCom/CyberSciTech'
 paperurl: 'https://doi.org/10.1109/DASC/PiCom/CBDCom/Cy55231.2022.9927841'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. An Approach to Support Digital Process Twin. In: DASC/PiCom/CBDCom/CyberSciTech, 1-4, 2022'
+authors: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi.'
 tool: 'none'
 ---
 
@@ -27,7 +28,7 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _An Approac
 
 
 
-<pre>
+<pre class='bibtex'>
 @inproceedings{corradiniPRRT22,
 author       = {Flavio Corradini and
                 Sara Pettinari and
