--- a/_publications/c-5.md
+++ b/_publications/c-5.md
@@ -8,6 +8,7 @@ date: 2024-10-01
 venue: 'Process Mining Workshops'
 paperurl: 'https://pros.unicam.it/cominds/assets/papers/ICPM_2024_paper_179.pdf'
 citation: 'A. Giacché, S. Pettinari, and L. Rossi. Revealing One-to-Many Event Relationships in Event Knowledge Graphs. Process Mining Workshops: toappear, 2024'
+authors: 'A. Giacché, S. Pettinari, and L. Rossi.'
 tool: 'soup'
 ---
 
@@ -24,7 +25,7 @@ Object-centric process mining is recognized to overcome the limitations of tradi
 Cite as: A. Giacché, S. Pettinari, and L. Rossi. _Revealing One-to-Many Event Relationships in Event Knowledge Graphs_. Process Mining Workshops: toappear, 2024
 
 
-<pre>
+<pre class='bibtex'>
 @inproceedings{giacchePR24,
     author       = {Alessio Giacché and
                     Sara Pettinari and
