--- a/_publications/j-1.md
+++ b/_publications/j-1.md
@@ -8,6 +8,7 @@ date: 2022-12-01
 venue: 'Journal of Robotics and Autonomous Systems'
 paperurl: 'https://doi.org/10.1016/j.robot.2022.104322'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. A BPMN-driven framework for Multi-Robot System development. Robotics and Autonomous Systems, 160,104322. (2023)'
+authors: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi.'
 tool: 'fame'
 ---
 
@@ -25,11 +26,11 @@ In this paper, we present a novel framework for modeling, configuring and enacti
 
 ***
 
-Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A BPMN-driven framework for Multi-Robot System development_. Robotics and Autonomous Systems, 160,104322. (2023)
+Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A BPMN-driven framework for Multi-Robot System development_. Robotics and Autonomous Systems, 160, 104322. (2023)
 
 
 
-<pre>
+<pre class='bibtex'>
   @article{corradiniPRRT23,
   author       = {Flavio Corradini and
                   Sara Pettinari and
