--- a/_publications/j-3.md
+++ b/_publications/j-3.md
@@ -7,7 +7,8 @@ category: manuscripts
 date: 2024-01-01
 venue: 'Journal of Software and Systems Modeling'
 paperurl: 'https://doi.org/10.1007/s10270-024-01153-5'
-citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. A technique for discovering BPMN collaboration diagrams. Software and Systems Modeling (2024)'
+citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. A technique for discovering BPMN collaboration diagrams. Software and Systems Modeling, 23(6), 1323–1343 (2024)'
+authors: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi.'
 tool: 'none'
 ---
 
@@ -22,11 +23,11 @@ The process mining domain is actively supported by techniques and tools addressi
 
 ***
 
-Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A technique for discovering BPMN collaboration diagrams_. Software and Systems Modeling (2024)
+Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A technique for discovering BPMN collaboration diagrams_. Software and Systems Modeling, 23, 1323–1343 (2024)
 
 
 
-<pre>
+<pre class='bibtex'>
 @article{corradiniPRRT24,
   author       = {Flavio Corradini and
                   Sara Pettinari and
@@ -35,9 +36,11 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _A technique fo
                   Francesco Tiezzi},
   title        = {A technique for discovering BPMN collaboration diagrams},
   journal      = {Software and Systems Modeling},
-  pages        ={1--21},
-  year         ={2024},
-  publisher    ={Springer}
+  volume       = {23},
+  number       = {6},
+  pages        = {1323--1343},
+  year         = {2024},
+  publisher    = {Springer}
 }
 </pre>
 
