--- a/_publications/c-3.md
+++ b/_publications/c-3.md
@@ -8,6 +8,7 @@ date: 2023-09-01
 venue: 'Conference on Conceptual Modeling: ER Forum'
 paperurl: 'https://ceur-ws.org/Vol-3618/forum_paper_17.pdf'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Ruschioni, F. Tiezzi. Enhancing Compatibility in QoS Communication for the Internet of Robotic Things. ER Forum/Posters/Demos, vol. 3618, CEUR-WS.org, 2023.'
+authors: 'F. Corradini, S. Pettinari, B. Re, L. Ruschioni, and F. Tiezzi.'
 tool: 'fame'
 ---
 
@@ -23,7 +24,7 @@ Internet of Things and robotic systems are widespread in many application domain
 Cite as: F. Corradini, S. Pettinari, B. Re, L. Ruschioni, F. Tiezzi. _Enhancing Compatibility in QoS Communication for the Internet of Robotic Things_. ER Forum/Posters/Demos, vol. 3618, CEUR-WS.org, 2023.
 
 
-<pre>
+<pre class='bibtex'>
   @inproceedings{corradiniP0R023,
   author       = {Flavio Corradini and
                   Sara Pettinari and
