--- a/_publications/c-4.md
+++ b/_publications/c-4.md
@@ -8,6 +8,7 @@ date: 2023-10-01
 venue: 'International Conference on Enterprise Design, Operations, and Computing'
 paperurl: 'https://doi.org/10.1007/978-3-031-46587-1_7'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. A Methodology for the Analysis of Robotic Systems via Process Mining. Enterprise Design, Operations, and Computing: 117-133, 2023'
+authors: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi.'
 tool: 'tale'
 ---
 
@@ -25,7 +26,7 @@ Robotic systems are widely adopted in various application scenarios. A very comp
 Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi. _A Methodology for the Analysis of Robotic Systems via Process Mining_. Enterprise Design, Operations, and Computing: 117-133, 2023
 
 
-<pre>
+<pre class='bibtex'>
 @inproceedings{corradiniPRRT23,
     author       = {Flavio Corradini and
                     Sara Pettinari and
