--- a/_publications/j-2.md
+++ b/_publications/j-2.md
@@ -8,6 +8,7 @@ date: 2023-08-01
 venue: 'Journal of Big Data and Cognitive Computing'
 paperurl: 'https://doi.org/10.3390/bdcc7030139'
 citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. Executable Digital Process Twins: Towards the Enhancement of Process-Driven Systems. Big Data and Cognitive Computing, 7(3), 139. (2023)'
+authors: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and F. Tiezzi.'
 tool: 'none'
 ---
 
@@ -27,15 +28,14 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, F. Tiezzi. _Executable Dig
 
 
 
-<pre>
+<pre class='bibtex'>
   @article{corradiniPRRT23,
     author       = {Flavio Corradini and
                     Sara Pettinari and
                     Barbara Re and
                     Lorenzo Rossi and
                     Francesco Tiezzi},
-    title        = {Executable Digital Process Twins: Towards the Enhancement of Process-Driven
-                    Systems},
+    title        = {Executable Digital Process Twins: Towards the Enhancement of Process-Driven Systems},
     journal      = {Big Data and Cognitive Computing},
     volume       = {7},
     number       = {3},
