[update] updated info

--- a/_publications/c-5.md
+++ b/_publications/c-5.md
@@ -4,10 +4,10 @@ collection: publications
 permalink: /publication/c-5
 excerpt: ''
 category: conferences
-date: 2024-10-01
+date: 2024-10-14
 venue: 'Process Mining Workshops'
-paperurl: 'https://pros.unicam.it/cominds/assets/papers/ICPM_2024_paper_179.pdf'
-citation: 'A. Giacché, S. Pettinari, and L. Rossi. Revealing One-to-Many Event Relationships in Event Knowledge Graphs. Process Mining Workshops: toappear, 2024'
+paperurl: 'https://doi.org/10.1007/978-3-031-82225-4_14'
+citation: 'A. Giacché, S. Pettinari, and L. Rossi. Revealing One-to-Many Event Relationships in Event Knowledge Graphs. Process Mining Workshops: 184--196, 2025'
 authors: 'A. Giacché, S. Pettinari, and L. Rossi.'
 tool: 'soup'
 ---
@@ -22,7 +22,7 @@ Object-centric process mining is recognized to overcome the limitations of tradi
 
 ***
 
-Cite as: A. Giacché, S. Pettinari, and L. Rossi. _Revealing One-to-Many Event Relationships in Event Knowledge Graphs_. Process Mining Workshops: toappear, 2024
+Cite as: A. Giacché, S. Pettinari, and L. Rossi. _Revealing One-to-Many Event Relationships in Event Knowledge Graphs_. Process Mining Workshops: 184--196, 2025.
 
 
 <pre class='bibtex'>
@@ -33,9 +33,9 @@ Cite as: A. Giacché, S. Pettinari, and L. Rossi. _Revealing One-to-Many Event R
     title        = {Revealing One-to-Many Event Relationships in Event Knowledge Graphs},
     booktitle    = {Process Mining Workshops},
     series       = {Lecture Notes in Business Information Processing},
-    volume       = {},
-    pages        = {toappear},
+    volume       = {533},
+    pages        = {184--196},
     publisher    = {Springer},
-    year         = {2024}
+    year         = {2025}
   }
 </pre>
