--- a/_publications/c-6.md
+++ b/_publications/c-6.md
@@ -6,8 +6,8 @@ excerpt: ''
 category: conferences
 date: 2025-06-01
 venue: 'Intelligent Information Systems. CAiSE 2025'
-paperurl: ''
-citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo. Robotic Datasets for Process Mining. Intelligent Information Systems. CAiSE: toappear, 2025'
+paperurl: 'https://link.springer.com/chapter/10.1007/978-3-031-94590-8_7'
+citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo. Robotic Datasets for Process Mining. Intelligent Information Systems. CAiSE: 53–-61, 2025'
 authors: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo.'
 ---
 
@@ -18,11 +18,11 @@ In this exploratory paper, we present a collection of publicly available robotic
 
 ***
 
-<img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" width="20" height="20"> Download paper [here]()
+<img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" width="20" height="20"> Download paper [here](https://link.springer.com/chapter/10.1007/978-3-031-94590-8_7)
 
 ***
 
-Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo. Robotic Datasets for Process Mining. Intelligent Information Systems. CAiSE: toappear, 2025
+Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo. Robotic Datasets for Process Mining. Intelligent Information Systems. CAiSE: 53–-61, 2025
 
 
 <pre class='bibtex'>
@@ -32,8 +32,8 @@ Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo. Robotic D
   booktitle={Intelligent Information Systems - CAiSE Forum},
   year={2025},
   series={LNBIP},
-  volume={To Appear},
-  pages={},
+  volume={557},
+  pages={53--61},
   publisher={Springer}
 }
 </pre>
