--- a/_publications/c-7.md
+++ b/_publications/c-7.md
@@ -4,10 +4,10 @@ collection: publications
 permalink: /publication/c-7
 excerpt: ''
 category: conferences
-date: 2025-06-01
+date: 2025-06-14
 venue: 'Advanced Information Systems Engineering Workshops. CAiSE 2025'
 paperurl: ''
-citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo. Enabling Process Mining on Multimodal Robotic Data. Advanced Information Systems Engineering Workshops. CAiSE: toappear, 2025'
+citation: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo. Enabling Process Mining on Multimodal Robotic Data. Advanced Information Systems Engineering Workshops. CAiSE: 257–-269, 2025'
 authors: 'F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo.'
 ---
 
@@ -19,22 +19,22 @@ process mining, laying the groundwork for future research on process mining-base
 
 ***
 
-<img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" width="20" height="20"> Download paper [here](../assets/pdf/caise_ws_multimodal_robot.pdf){:target="_blank"}
+<img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" width="20" height="20"> Download paper [here](https://link.springer.com/chapter/10.1007/978-3-031-94931-9_21)
 
 ***
 
-Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo. Enabling Process Mining on Multimodal Robotic Data. Intelligent Information Systems. CAiSE: toappear, 2025
+Cite as: F. Corradini, S. Pettinari, B. Re, L. Rossi, and M. Sampaolo. Enabling Process Mining on Multimodal Robotic Data. Advanced Information Systems Engineering Workshops. CAiSE: 257–-269, 2025
 
 
 <pre class='bibtex'>
 @inproceedings{corradiniPRRS25a,
   title={Enabling Process Mining on Multimodal Robotic Data},
   author={Corradini, Flavio and Pettinari, Sara and Re, Barbara and Rossi, Lorenzo and Sampaolo, Massimiliano},
-  booktitle={Advanced Information Systems Engineering Workshops - CAiSE},
+  booktitle={Advanced Information Systems Engineering Workshops},
   year={2025},
   series={LNBIP},
-  volume={To Appear},
-  pages={},
+  volume={556},
+  pages={257–269},
   publisher={Springer}
 }
 </pre>
