--- a/_publications/c-10.md
+++ b/_publications/c-10.md
@@ -5,9 +5,9 @@ permalink: /publication/c-10
 excerpt: ''
 category: conferences
 date: 2025-11-01
-venue: 'Digital Humanism Interdisciplinary Science and Research Conference 2025'
-paperurl: ''
-citation: 'S. Pettinari, M. De Sanctis and P. Inverardi. Realizing Ethical-aware Business Processes. Digital Humanism Interdisciplinary Science and Research Conference. toappear, 2025'
+venue: 'Digital Humanism 2025'
+paperurl: 'https://link.springer.com/chapter/10.1007/978-3-032-11108-1_16'
+citation: 'S. Pettinari, M. De Sanctis and P. Inverardi. Realizing Ethical-aware Business Processes. Digital Humanism. DIGHUM 2025. LNCS, vol 16319, 2025'
 authors: 'S. Pettinari, M. De Sanctis and P. Inverardi.'
 ---
 
@@ -18,7 +18,7 @@ both system-level obligations and individual ethical values. Focusing on autonom
 
 ***
 
-<img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" width="20" height="20"> Download paper [here]()
+<img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/download.svg" width="20" height="20"> Download paper [here](https://link.springer.com/chapter/10.1007/978-3-032-11108-1_16)
 
 ***
 
@@ -29,11 +29,11 @@ Cite as: S. Pettinari, M. De Sanctis and P. Inverardi. Realizing Ethical-aware B
 @inproceedings{pettinariDSI25,
   title={Realizing Ethical-aware Business Processes},
   author={Pettinari, Sara and De Sanctis, Martina and Inverardi, Paola},
-  booktitle={Digital Humanism Interdisciplinary Science and Research Conference},
-  year={2025},
+  booktitle={Digital Humanism},
+  year={2026},
   series={LNCS},
-  volume={},
-  pages={},
+  volume={16319},
+  pages={219-–235},
   publisher={Springer}
 }
 </pre>
