--- a/_publications/c-11.md
+++ b/_publications/c-11.md
@@ -7,7 +7,7 @@ category: conferences
 date: 2025-10-21
 venue: 'International Conference on Process Mining 2025'
 paperurl: 'https://pros.unicam.it/soup/'
-citation: 'F. Corradini, A. Giacché, S. Pettinari, B. Re, L. Rossi. SOUP: Simplifying Event Knowledge Graph Management for Process Mining. International Conference on Process Mining (Demo). toappear, 2025'
+citation: 'F. Corradini, A. Giacché, S. Pettinari, B. Re, L. Rossi. SOUP: Simplifying Event Knowledge Graph Management for Process Mining. International Conference on Process Mining (Demo). 2025'
 authors: 'F. Corradini, A. Giacché, S. Pettinari, B. Re, L. Rossi.'
 tool: 'soup'
 ---
@@ -23,10 +23,22 @@ To address these limitations, we introduce SOUP, a user-friendly tool for constr
 
 ***
 
-Cite as: F. Corradini, A. Giacché, S. Pettinari, B. Re, L. Rossi. SOUP: Simplifying Event Knowledge Graph Management for Process Mining. International Conference on Process Mining (Demo): toappear, 2025
+Cite as: F. Corradini, A. Giacché, S. Pettinari, B. Re, L. Rossi. SOUP: Simplifying Event Knowledge Graph Management for Process Mining. International Conference on Process Mining (Demo), 2025
 
 
 <pre class='bibtex'>
 @inproceedings{
+  author       = {Flavio Corradini and
+                  Alessio Giacché and
+                  Sara Pettinari and
+                  Barbara Re and
+                  Lorenzo Rossi},
+  title        = {SOUP: Simplifying Event Knowledge Graph Management for Process Mining},
+  booktitle    = {Doctoral Consortium and Demo Track 2025 at the International Conference on Process Mining 2025},
+  series       = {CEUR Workshop Proceedings},
+  volume       = {4088},
+  pages        = {1--6},
+  publisher    = {CEUR-WS.org},
+  year         = {2025},
 }
 </pre>
